# DigitalClock

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
